fix DTO